cluster/home/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      volumes:
      - name: code-server
        persistentVolumeClaim:
          claimName: code-server-pvc
      containers:
      - image: ghcr.io/coder/code-server:4.19.1
        name: code-server
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 8080
           name: https
        volumeMounts:
         - mountPath: /config
           name: code-server
