cluster/home/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-web-svc
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - name: http
      targetPort: 8080
      port: 80
