cluster/home/code-server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code-server.local.cjsolsen.com`)
      kind: Rule
      services:
        - name: code-server-web-svc
          port: 80
      middlewares:
         - name: default-headers
  tls:
    secretName: code-server-cjsolsen-com-tls
